sandbox/output
OneHundredDoorsTest.java:11: error: cannot find symbol
        assertEquals(new D[]{D.OPEN}, oneHundredDoors.doorStatesAfterPassingDoors(1));
                         ^
  symbol:   class D
  location: class OneHundredDoorsTest
OneHundredDoorsTest.java:11: error: cannot find symbol
        assertEquals(new D[]{D.OPEN}, oneHundredDoors.doorStatesAfterPassingDoors(1));
                             ^
  symbol:   variable D
  location: class OneHundredDoorsTest
OneHundredDoorsTest.java:11: error: cannot find symbol
        assertEquals(new D[]{D.OPEN}, oneHundredDoors.doorStatesAfterPassingDoors(1));
                                      ^
  symbol:   variable oneHundredDoors
  location: class OneHundredDoorsTest
3 errors
